[package]
name = "daas"
version = "0.1.0"
description = "demangler-as-a-service: Basic web service to demange C++ symbols"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
cpp_demangle = "0.3.0"
